--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -1,3 +1,3 @@
-.layout{
-    @apply max-w-[1112px] container mx-auto h-full rounded-large border border-gray
+.layout {
+    @apply max-w-[1112px]  container mx-auto h-auto rounded-large border border-gray;
 }
