--- a/src/components/Books/BookStyle.css
+++ b/src/components/Books/BookStyle.css
@@ -1,3 +1,3 @@
 .book-list{
-    @apply flex flex-wrap grow shrink self-auto basis-auto gap-4 justify-between items-stretch pt-2
+    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6 justify-items-center pt-2 overflow-hidden
 }
